--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,16 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <link href="/path/to/c3.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.13/c3.min.css" rel="stylesheet">
 
   <!-- Load d3.js and c3.js -->
-  <script src="/path/to/d3.v5.min.js" charset="utf-8"></script>
-  <script src="/path/to/c3.min.js"></script>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.15.0/d3.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.13/c3.min.js"></script>
 
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <%= yield %>
-
 </body>
 </html>
