--- a/app/views/currency_conversions/index.html.erb
+++ b/app/views/currency_conversions/index.html.erb
@@ -43,7 +43,7 @@
       <input type="date" name="[end_date]" id="_end_date">
     </div>
     <div class="col-sm-2 each-box text-center">
-      <button class="search-button success" data-url="/currency_conversions_history" id="submit-search-btn">Search</button>
+      <button class="search-button success" onclick="calculateDates()" data-url="/currency_conversions_history" id="submit-search-btn">Search</button>
     </div>
   </div>
   <div class="row">
