Individual Graphs for each currency against base currency

--- a/app/views/currency_conversions/index.html.erb
+++ b/app/views/currency_conversions/index.html.erb
@@ -50,7 +50,9 @@
     </div>
   </div>
   <div class="row" id="charts_div">
-    <div id="chart"></div>
+    <div id="individualChart" class="text-center">
+      <h3 class=" hidden text-primary graph-msg">Graphs of <span id="selectedCurrency"></span> Currency VS Individual Currencies</h3>
+    </div>
   </div>
 </div>
 </body>
